src/scss/base/_rendered.scss
@use '../abstract/variables' as *;
@use '../abstract/mixins' as *;

.rendered {
  font-family: $font-serif;
  line-height: 1.5;
  margin-inline: 1rem;

  h2 {
    font-family: $font-serif-display;
    font-size: 3rem;
    font-weight: normal;
    line-height: 1;
    margin-block-start: 4.5rem;
    margin-block-end: 2rem;
    scroll-margin-block-start: 4.5rem;
    counter-increment: h2s;

    &::before {
      font-size: 1.5rem;
      line-height: 1;
      display: block;
      margin-block-end: 0.5em;
      content: '0' counter(h2s);
      color: $color-text-mid;
    }
  }

  h3 {
    font-size: 1.5em;
    font-weight: normal;
    font-style: italic;
    margin-block-start: 1em;
    margin-block-end: 1em;
    color: $color-text-mid;
    text-wrap: auto;
    line-height: 1;
  }

  h4 {
    font-family: $font-sans;
    font-size: 1em;
    font-weight: normal;
    margin-block-start: 2em;
    margin-block-end: 1em;
    text-transform: uppercase;
    color: $color-text-mid;
  }

  > p {
    margin-block-end: 1em;

    @include screen(sm) {
      max-width: 60ch;
    }
  }

  > ul,
  ol {
    @include screen(sm) {
      max-width: 60ch;
    }
  }

  blockquote {
    display: block;
    width: 100vw;
    max-width: 60ch;
    margin-block: 2rem;
    padding-inline-start: calc(1.25rem - 0.5rem);
    padding-inline-end: 1.25rem;
    color: $color-text-mid;
    border-inline-start: 0.5rem solid $color-border-light;
  }

  > :is(.editors-note, .target-audience, .under-construction, .twitter-tweet) {
    margin-block: 2rem;
    border-inline-start-color: var(--callout-color, #{$color-border-light});
  }
}

.editors-note,
.target-audience,
.under-construction,
.twitter-tweet {
  font-family: $font-sans;
  display: block;
  width: 100vw;
  margin-inline-start: calc(50% - 50vw);
  padding-inline-start: 0.5rem;
  padding-inline-end: 1rem;
  color: $color-text-mid;
  border-inline-start: 0.5rem solid $color-border-light;

  @include screen(sm) {
    width: auto;
    max-width: unset;
    margin-inline: 0;
    padding-inline: 1rem;
  }

  &::before {
    font-size: 0.875rem;
    font-weight: bold;
    line-height: 1.5;
    display: block;
    margin-block-end: 1em;
    text-transform: uppercase;
  }
}

.editors-note {
  &::before {
    content: 'Editor’s Note';
  }
}

.target-audience {
  --callout-color: currentColor;

  &::before {
    content: 'Target Audience';
  }
}

.under-construction {
  --callout-color: #ebcb8b;

  &::before {
    content: '🚧 Under Construction 🚧';
  }
}

.twitter-tweet {
  --callout-color: hsl(204deg 78% 83%);

  &::before {
    content: '🐦 Tweet';
  }
}

